[package]
name = "i3_companion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-i3ipc = {version = "0.14.0"}
tokio = {version = "1.0"} #, features = ["io-util", "macros", "rt-multi-thread"]}
tokio-util = { version = "0.6", features = ["codec"] }
tokio-stream = { version = "0.1" }
