[package]
name = "i3-companion"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-i3ipc = {version = "0.14.0"}
tokio = {version = "1.0"} #, features = ["io-util", "macros", "rt-multi-thread"]}
tokio-util = { version = "0.6", features = ["codec"] }
tokio-stream = { version = "0.1" }
async-trait = { version = "0.1.52" }
glob = { version = "0.3.0" }
regex = { version = "1.5.5" }
libc = {version = "0.2" } # needed for libc::open to get nonblocking write to FIFO
toml = {version = "0.5.8" }
dirs = {version = "4.0.0" }
serde = {version = "1.0.136"}
